[package]
name = "letsencrypt-rs"
description = "Easy to use Let's Encrypt client to issue, renew and revoke TLS certificates"
version = "0.1.4"
authors = ["Onur Aslan <onur@onur.im>"]
license = "MIT"
keywords = ["letsencrypt", "acme"]
readme = "README.md"
repository = "https://github.com/onur/letsencrypt-rs"

[dependencies]
acme-client = { version = "0.3", path = "acme-client" }
clap = "2.10"
env_logger = "0.3"
