[package]
name = "letsencrypt-rs"
description = "Easy to use Let's Encrypt client to issue, renew and revoke TLS certificates"
version = "0.1.4"
authors = ["Onur Aslan <onur@onur.im>"]
license = "MIT"
keywords = ["letsencrypt", "acme"]
readme = "README.md"
repository = "https://github.com/onur/letsencrypt-rs"

[dependencies]
# Temporarily use acme-client from crates.io
# letsencrypt-rs is not compatible with acme-client 0.4 yet
# acme-client = { version = "0.3", path = "acme-client" }
acme-client = "0.3"
clap = "2.10"
env_logger = "0.3"
