[package]
name = "acme-client"
description = "Easy to use ACME client library to issue, renew and revoke TLS certificates"
version = "0.5.3"
authors = ["Onur Aslan <onur@onur.im>"]
license = "MIT"
keywords = ["letsencrypt", "acme"]
readme = "README.md"
documentation = "https://docs.rs/acme-client"
repository = "https://github.com/onur/acme-client"

[dependencies]
error-chain = "0.12"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.9"
hyper = "0.10"
reqwest = "0.9"
openssl = "0.10"
clap = { version = "2", optional = true }
env_logger = { version = "0.4", optional = true }
foreign-types = { version = "0.3.1", optional = true }
openssl-sys = { version = "0.9.24", optional = true }

[dev-dependencies]
env_logger = "0.4"

[[bin]]
name = "acme-client"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "env_logger", "openssl-sys", "foreign-types"]
