[package]
name = "acme-client"
description = "Easy to use ACME client library to issue, renew and revoke TLS certificates"
version = "0.1.5"
authors = ["Onur Aslan <onur@onur.im>"]
license = "MIT"
keywords = ["letsencrypt", "acme"]
readme = "../README.md"
documentation = "https://docs.rs/acme-client"
repository = "https://github.com/onur/letsencrypt-rs"

[dependencies]
error-chain = "^0.4.2"
log = "^0.3.6"
rustc-serialize = "^0.3.19"
hyper = "^0.9.10"
openssl = { version = "^0.8.1", features = [ "x509_generator_request" ] }

[dev-dependencies]
env_logger = "^0.3"
