[package]
name = "acme-client"
description = "Easy to use ACME client library to issue, renew and revoke TLS certificates"
version = "0.4.3"
authors = ["Onur Aslan <onur@onur.im>"]
license = "MIT"
keywords = ["letsencrypt", "acme"]
readme = "../README.md"
documentation = "https://docs.rs/acme-client"
repository = "https://github.com/onur/letsencrypt-rs"

[dependencies]
error-chain = "0.10"
log = "0.3"
rustc-serialize = "0.3"
hyper = "0.10"
reqwest = "0.6"
openssl = "0.9.11"

[dev-dependencies]
env_logger = "0.4"
